Added de Goes Spherical Harmonics Tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,8 +16,8 @@ if (EMSCRIPTEN)
     add_executable(run_volume_tests run_volume_tests.cpp)
     target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh cholmod)
 
-    add_executable(run_surface_convergence run_surface_tests.cpp)
-    target_link_libraries(run_surface_convergence ${OBJS} poly)
+    add_executable(run_surface_tests run_surface_tests.cpp)
+    target_link_libraries(run_surface_tests ${OBJS} poly)
 
     add_executable(surface_viewer surface_viewer_main.cpp  SurfaceViewer.cpp)
     target_link_libraries(surface_viewer ${OBJS} poly triangle)
@@ -35,8 +35,8 @@ else ()
     add_executable(run_volume_tests run_volume_tests.cpp)
     target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh cholmod)
 
-    add_executable(run_surface_convergence run_surface_tests.cpp)
-    target_link_libraries(run_surface_convergence ${OBJS} pmp poly cholmod)
+    add_executable(run_surface_tests run_surface_tests.cpp)
+    target_link_libraries(run_surface_tests ${OBJS} pmp poly cholmod)
 
     add_executable(surface_viewer surface_viewer_main.cpp  SurfaceViewer.cpp SurfaceViewer.h )
     target_link_libraries(surface_viewer ${OBJS} pmp pmp_vis poly cholmod )
