--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,9 @@ file(GLOB HEADERS ./Surface/*.h ./HarmonicBase3D2D/*.hpp ./Volume/*.h )
 add_subdirectory(VolumeMesh)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/VolumeMesh)
 
-SET(OBJS
-        /home/abunge/programs/libigl/external/triangle/triangle.o
-        )
+#SET(OBJS
+#        /home/abunge/programs/libigl/external/triangle/triangle.o
+#        )
 
 if (EMSCRIPTEN)
 
@@ -14,7 +14,7 @@ if (EMSCRIPTEN)
     target_link_libraries(poly pmp_vis VolumeMesh)
 
     add_executable(run_volume_tests run_volume_tests.cpp)
-    target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh cholmod)
+    target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh)
 
     add_executable(run_surface_tests run_surface_tests.cpp)
     target_link_libraries(run_surface_tests ${OBJS} poly)
@@ -23,7 +23,7 @@ if (EMSCRIPTEN)
     target_link_libraries(surface_viewer ${OBJS} poly triangle)
 
     add_executable(volume_viewer volume_viewer_main.cpp VolumeViewer.cpp y)
-    target_link_libraries(volume_viewer ${OBJS} poly VolumeMesh cholmod)
+    target_link_libraries(volume_viewer ${OBJS} poly VolumeMesh)
 
     set_target_properties(diamond_laplacian PROPERTIES LINK_FLAGS "--shell-file ${PROJECT_SOURCE_DIR}/external/pmp-library/src/apps/data/shell.html")
 
@@ -33,15 +33,15 @@ else ()
     target_link_libraries(poly pmp_vis VolumeMesh)
 
     add_executable(run_volume_tests run_volume_tests.cpp)
-    target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh cholmod)
+    target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh )
 
     add_executable(run_surface_tests run_surface_tests.cpp)
-    target_link_libraries(run_surface_tests ${OBJS} pmp poly cholmod)
+    target_link_libraries(run_surface_tests ${OBJS} pmp poly )
 
     add_executable(surface_viewer surface_viewer_main.cpp  SurfaceViewer.cpp SurfaceViewer.h )
-    target_link_libraries(surface_viewer ${OBJS} pmp pmp_vis poly cholmod )
+    target_link_libraries(surface_viewer ${OBJS} pmp pmp_vis poly )
 
     add_executable(volume_viewer volume_viewer_main.cpp VolumeViewer.cpp VolumeViewer.h)
-    target_link_libraries(volume_viewer ${OBJS} poly VolumeMesh cholmod)
+    target_link_libraries(volume_viewer ${OBJS} poly VolumeMesh)
 endif ()
 
