--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,12 @@
-file(GLOB SOURCES ./Surface/*.cpp  ./Volume/*.cpp )
-file(GLOB HEADERS ./Surface/*.h  ./Volume/*.h )
+file(GLOB SOURCES ./Surface/*.cpp  ./Volume/*.cpp ./HarmonicBase3D2D/*.cpp )
+file(GLOB HEADERS ./Surface/*.h  ./Volume/*.h ./HarmonicBase3D2D/*.h)
 
 add_subdirectory(VolumeMesh)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/VolumeMesh)
+
+#SET(OBJS
+#        /home/abunge/programs/libigl/external/triangle/triangle.o
+#        )
 
 if (EMSCRIPTEN)
 
@@ -10,16 +14,19 @@ if (EMSCRIPTEN)
     target_link_libraries(poly pmp_vis VolumeMesh)
 
     add_executable(run_volume_tests run_volume_tests.cpp)
-    target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh)
+    target_link_libraries(run_volume_tests poly VolumeMesh)
 
     add_executable(run_surface_tests run_surface_tests.cpp)
-    target_link_libraries(run_surface_tests ${OBJS} poly)
+    target_link_libraries(run_surface_tests poly)
 
     add_executable(surface_viewer surface_viewer_main.cpp  SurfaceViewer.cpp)
-    target_link_libraries(surface_viewer ${OBJS} poly triangle)
+    target_link_libraries(surface_viewer poly triangle)
 
     add_executable(volume_viewer volume_viewer_main.cpp VolumeViewer.cpp)
-    target_link_libraries(volume_viewer ${OBJS} poly VolumeMesh)
+    target_link_libraries(volume_viewer poly VolumeMesh)
+
+    add_executable(take_timings run_timings.cpp)
+    target_link_libraries(take_timings poly VolumeMesh)
 
 else ()
 
@@ -27,15 +34,18 @@ else ()
     target_link_libraries(poly pmp_vis VolumeMesh)
 
     add_executable(run_volume_tests run_volume_tests.cpp)
-    target_link_libraries(run_volume_tests ${OBJS} poly VolumeMesh )
+    target_link_libraries(run_volume_tests poly VolumeMesh )
 
     add_executable(run_surface_tests run_surface_tests.cpp)
-    target_link_libraries(run_surface_tests ${OBJS} pmp poly )
+    target_link_libraries(run_surface_tests pmp poly )
 
     add_executable(surface_viewer surface_viewer_main.cpp  SurfaceViewer.cpp SurfaceViewer.h )
-    target_link_libraries(surface_viewer ${OBJS} pmp pmp_vis poly )
+    target_link_libraries(surface_viewer pmp pmp_vis poly )
 
     add_executable(volume_viewer volume_viewer_main.cpp VolumeViewer.cpp VolumeViewer.h)
-    target_link_libraries(volume_viewer ${OBJS} poly VolumeMesh)
+    target_link_libraries(volume_viewer poly VolumeMesh)
+
+    add_executable(take_timings run_timings.cpp)
+    target_link_libraries(take_timings poly VolumeMesh)
 endif ()
 
