--- a/src/VolumeMesh/CMakeLists.txt
+++ b/src/VolumeMesh/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB SRCS ./*.cpp)
 file(GLOB HDRS ./*.h)
 
 add_library(VolumeMesh ${SRCS} ${HDRS})
-target_link_libraries(VolumeMesh OpenVolumeMesh pmp_vis)
+target_link_libraries(VolumeMesh Volume OpenVolumeMesh pmp_vis)
